[package]
name = "rover-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-pca9685 = "0.3.1"
linux-embedded-hal = "0.3.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
ctrlc = "3.1.9"
async-tungstenite = "0.14.0"
