[package]
name = "rover"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-pca9685 = "0.3.1"
linux-embedded-hal = "0.3.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tungstenite = "0.14.0"
async-tungstenite = "0.14.0"
async-std = "1.9.0"
futures = "0.3.16"
futures-util = "0.3.16"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
hyper = { version = "0.14.11", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
